# meridian_market

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/management/commands/: csu.py
network/migrations/: 0001_initial.py
users/: admin.py  apps.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
